@@ -1,7 +1,7 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.19.26
+Version: 1.19.30
 Date: 2016-03-31
 Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, Meghan Short, and Isha Mehta
 Maintainer: Habil Zare <zare@u.washington.edu>
